move test to .Example

--- a/Assets/Script/AngusChangyiMods.Example/Tests/AngusChangyiMods.Tests.asmdef
+++ b/Assets/Script/AngusChangyiMods.Example/Tests/AngusChangyiMods.Tests.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "AngusChangyiMods.Tests",
+    "name": "AngusChangyiMods.Example.Tests",
     "references": [
         "AngusChangyiMods.Core",
         "AngusChangyiMods.Example.Core",
