def loader, def varivier testing, def merger, unit test !

--- a/Assets/Script/AngusChangyiMods/Test/AngusChangyiMods.Tests.asmdef
+++ b/Assets/Script/AngusChangyiMods/Test/AngusChangyiMods.Tests.asmdef
@@ -4,14 +4,15 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "AngusChangyiMods.Core.Core"
+        "AngusChangyiMods.Core.Core",
+        "TNRD.NSubstitute"
     ],
     "includePlatforms": [
         "Editor"
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
+    "overrideReferences": true,
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
