order storage and unit test

--- a/Assets/Script/AngusChangyiMods/Test/AngusChangyiMods.Tests.asmdef
+++ b/Assets/Script/AngusChangyiMods/Test/AngusChangyiMods.Tests.asmdef
@@ -4,8 +4,7 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "AngusChangyiMods.Core.Core",
-        "TNRD.NSubstitute"
+        "AngusChangyiMods.Core.Core"
     ],
     "includePlatforms": [
         "Editor"
